css/stylesheet.css
.row {
  border-top: 1px solid grey;
  padding-bottom: 50px;
  padding-top: 50px;
}
/*form {
  border: 1px solid grey;
  padding: 20px;
} */
label {
  font-weight: bold;
}
#contactUsForm {
  border: 1px solid grey;
  padding: 20px;
}
#productReviews h2, p{
  text-align: center;
}
#gameStrategies h2, p{
  text-align: center;
}

